// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should not render <Divider /> when show is set to false 1`] = `null`;

exports[`<Divider /> should render <Divider /> with button 1`] = `
<section
  class="sc-bdnxRM cFuttp"
  data-testid="divider"
>
  <div
    class="sc-gtsrHT kYNZKW"
  >
    <h1
      class="sc-dlnjwi VWPZF"
    >
      Some title here
    </h1>
    <button
      class="sc-jSFjdj gvvKvs"
      style="gap: 30px;"
    >
      <span
        class="sc-gKAaRy sjknM"
      >
        Click me
      </span>
      <svg
        class="sc-iCoGMd jeAZbZ"
      >
        <path
          class="sc-fujyAs bLaEBj"
        />
      </svg>
    </button>
  </div>
</section>
`;

exports[`<Divider /> should render <Divider /> with data included 1`] = `
<section
  class="sc-bdnxRM cFuttp"
  data-testid="divider"
>
  <div
    class="sc-gtsrHT kYNZKW"
  >
    <h1
      class="sc-dlnjwi VWPZF"
    >
      Some title here
    </h1>
    <h3
      class="sc-hKFxyN bkFsMT"
    >
      This is subtitle included in divider component
    </h3>
    <div
      class="sc-eCApnc cFUyki"
    >
      Image to be pass here or svg
    </div>
  </div>
</section>
`;

exports[`<Divider /> should render <Divider /> with just title 1`] = `
<section
  class="sc-bdnxRM cFuttp"
  data-testid="divider"
>
  <div
    class="sc-gtsrHT kYNZKW"
  >
    <h1
      class="sc-dlnjwi VWPZF"
    >
      Some title here
    </h1>
  </div>
</section>
`;
